--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
                 
 
+
+            
                 <div class="home__img">
                     <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <mask id="mask0" mask-type="alpha">
@@ -193,9 +195,9 @@
         <footer class="footer">
             <p class="footer__title">Bhavishya jain</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.linkedin.com/in/bhavishyajain44" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.instagram.com/duh.its._bhavishya" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://github.com/Bhavishya41" class="footer__icon"><i class='bx bxl-github' ></i></a>
             </div>
             <p class="footer__copy">&#169; futurecodes. All rigths reserved</p>
         </footer>
