--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" placeholder="Query" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Enter" placeholder="Que" class="contact__button button">
+                        <input type="button" value="Send" placeholder="Que" class="contact__button button">
                     </form>
                 </div>
             </section>
