--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Bhavishya</h2>
-                        <p class="about__text">Hello! I'm Bhavishya, a B.Tech student at ITM SLS Baroda University, currently in my first semester. With a strong foundation in Python and growing expertise in HTML and JavaScript, I'm passionate about exploring the evolving world of technology. My primary interest lies in data science and data analytics, where I enjoy analyzing data, solving complex problems, and building innovative solutions.</p>
+                        <p class="about__text">Hello! I'm Bhavishya, a B.Tech student at ITM SLS Baroda University, currently in my first semester. With a strong foundation in Python and growing expertise in HTML and JavaScript, I'm always curious about exploring the evolving world of technology. My primary interest lies in data science and data analytics, where I enjoy analyzing data, solving complex problems, and building innovative solutions.</p>
                         <p class="about__text">Beyond academics, I'm also skilled in video editing and music production. I've had the opportunity to work with clients for video editing projects, creating engaging content for platforms like Instagram. Additionally, I produce hip-hop beats for rappers, blending my love for technology with my creative passions.</p>
                     </div>                                   
                 </div>
