--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="" <!--=====BOX ICONS=====-->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
-
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>techiristic.com</title>
 </head>
 
