--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <g mask="url(#mask0)">
                         <path
                             d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                        <image class="home__blob-img" x="50" y="60" href="images/candid.png" />
+                        <image class="home__blob-img" x="50" y="60" href="images/candi d.png" />
                     </g>
                 </svg>
             </div>
@@ -90,8 +90,8 @@
                 <div>
                     <h2 class="about__subtitle">I'am Bhavishya</h2>
                     <p class="about__text">Hello! I'm Bhavishya, a B.Tech student at ITM SLS Baroda University,
-                        currently in my first semester. With a strong foundation in Python and growing expertise in HTML
-                        and JavaScript, I'm passionate about exploring the evolving world of technology. My primary
+                        currently in my first semester. With a strong foundation in Python and growing expertise in front-end 
+                        development, I'm passionate about exploring the evolving world of technology. My primary
                         interest lies in data science and data analytics, where I enjoy analyzing data, solving complex
                         problems, and building innovative solutions.</p>
                     <p class="about__text">Beyond academics, I'm also skilled in video editing and music production.
