updated skills and fixed the hero section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="" <!--=====BOX ICONS=====-->
+    <!--=====BOX ICONS=====-->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/png" href="favicon.png">
+    <!-- Add this in your <head> for Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>techiristic.com</title>
 </head>
 
@@ -58,23 +60,10 @@
                 </div>
             </div>
 
-
-
-
-
             <div class="home__img">
-                <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <mask id="mask0" mask-type="alpha">
-                        <path
-                            d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                    </mask>
-                    <g mask="url(#mask0)">
-                        <path
-                            d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                        <image class="home__blob-img" x="50" y="60" href="images/candi d.png" />
-                    </g>
-                </svg>
+                <div class="home__blob">
+                    <img class="home__blob-img" src="images/gurugram.jpg" alt="Bhavishya Jain">
+                </div>
             </div>
         </section>
 
@@ -90,7 +79,7 @@
                 <div>
                     <h2 class="about__subtitle">I'am Bhavishya</h2>
                     <p class="about__text">Hello! I'm Bhavishya, a B.Tech student at ITM SLS Baroda University,
-                        currently in my first semester. With a strong foundation in Python and growing expertise in front-end 
+                        currently in my first semester. With a strong foundation in Python and growing expertise in front-end
                         development, I'm passionate about exploring the evolving world of technology. My primary
                         interest lies in data science and data analytics, where I enjoy analyzing data, solving complex
                         problems, and building innovative solutions.</p>
@@ -106,84 +95,64 @@
         <!--===== SKILLS =====-->
         <section class="skills section" id="skills">
             <h2 class="section-title">Skills</h2>
-
             <div class="skills__container bd-grid">
-                <div>
-                    <h2 class="skills__subtitle">Professional Skills</h2>
-                    <p class="skills__text">Here are some of the technical skills I've developed so far:</p>
-
-                    <!-- Python Skill -->
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-python skills__icon'></i> <!-- Python Icon -->
-                            <span class="skills__name">Python</span>
-                        </div>
-                        <div class="skills__bar skills__python"></div>
-                        <div>
-                            <span class="skills__percentage">100%</span>
-                        </div>
+                <div class="skills__categories">
+                    <div class="skills__category">
+                        <h3>Programming Languages</h3>
+                        <ul>
+                            <li><i class="fa-brands fa-python"></i> Python</li>
+                            <li><i class="fa-solid fa-code"></i> C++</li>
+                            <li><i class="fa-brands fa-js"></i> JavaScript</li>
+                            <li><i class="fa-solid fa-database"></i> SQL</li>
+                        </ul>
                     </div>
-
-                    <!-- HTML Skill -->
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-html5 skills__icon'></i>
-                            <span class="skills__name">HTML5</span>
-                        </div>
-                        <div class="skills__bar skills__html"></div>
-                        <div>
-                            <span class="skills__percentage">95%</span>
-                        </div>
+                    <div class="skills__category">
+                        <h3>Frontend Development</h3>
+                        <ul>
+                            <li><i class="fa-brands fa-html5"></i> HTML5</li>
+                            <li><i class="fa-brands fa-css3-alt"></i> CSS3</li>
+                            <li><i class="fa-brands fa-react"></i> React.js</li>
+                            <li><i class="fa-solid fa-wind"></i> Tailwind CSS</li>
+                        </ul>
                     </div>
-
-                    <!-- CSS Skill -->
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-css3 skills__icon'></i>
-                            <span class="skills__name">CSS3</span>
-                        </div>
-                        <div class="skills__bar skills__css"></div>
-                        <div>
-                            <span class="skills__percentage">85%</span>
-                        </div>
+                    <div class="skills__category">
+                        <h3>Backend Development</h3>
+                        <ul>
+                            <li><i class="fa-brands fa-node-js"></i> Node.js</li>
+                            <li><i class="fa-solid fa-server"></i> Express.js</li>
+                            <li><i class="fa-solid fa-link"></i> RESTful API Design</li>
+                        </ul>
                     </div>
-
-                    <!-- JavaScript Skill -->
-                    <div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-javascript skills__icon'></i>
-                            <span class="skills__name">JavaScript</span>
-                        </div>
-                        <div class="skills__bar skills__js"></div>
-                        <div>
-                            <span class="skills__percentage">40%</span>
-                        </div>
+                    <div class="skills__category">
+                        <h3>Database &amp; Tools</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-database"></i> MySQL</li>
+                            <li><i class="fa-solid fa-leaf"></i> MongoDB (Basics)</li>
+                            <li><i class="fa-brands fa-git-alt"></i> Git &amp; GitHub</li>
+                            <li><i class="fa-solid fa-flask"></i> Postman</li>
+                        </ul>
                     </div>
-                </div>
-
-                <div>
-                    <img src="assets/img/work3.jpg" alt="" class="skills__img">
                 </div>
             </div>
         </section>
 
         <!--work-->
         <section class="section work">
-            <h2 class="section-title">My Work</h2>
+            <h2 class="section-title">My Adventures</h2>
             <div class="work__container bd-grid">
                 <div class="work__img">
                     <img src="images/work1.jpg" alt="Work 1">
-                    <a href="https://github.com/Bhavishya41/Python_tutorial" target="_blank">my python projects</a>
+                    <a href="https://github.com/Bhavishya41/Python_tutorial" target="_blank">my python <br/>projects</a>
                 </div>
                 <div class="work__img">
                     <img src="images/work2.jpg" alt="Work 2">
-                    <a href="https://www.instagram.com/narrative.soul?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                        target="_blank">videos edited for a ig handle</a>
+                    <a href="https://saimonsaysbjain41.vercel.app/"
+                        target="_blank">Simon Says<br/> game</a>
                 </div>
                 <div class="work__img">
                     <img src="images/work3.png" alt="Work 3">
-                    <a href="https://drive.google.com/drive/folders/1fL_Bxr3ETmdWjh9sDe-UswWGM2JwMvje?usp=drive_link"
-                        target="_blank">beats produced by me</a>
+                    <a href="https://leetcode.com/u/bhavishya-jain/"
+                        target="_blank">Competitve Programing (leetcode)</a>
                 </div>
             </div>
         </section>
