added simon says github

--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
                     <img src="images/work2.jpg" alt="Work 2">
                     <a href="https://saimonsaysbjain41.vercel.app/"
                         target="_blank">Simon Says<br/> game</a>
+                    <a href="https://github.com/Bhavishya41" class="button" target="_blank">View on GitHub</a>
                 </div>
                 <div class="work__img">
                     <img src="images/work3.png" alt="Work 3">
-                    <a href="https://leetcode.com/u/bhavishya-jain/"
+                    <a href="https://github.com/Bhavishya41/saimon-says"
                         target="_blank">Competitve Programing (leetcode)</a>
                 </div>
             </div>
