--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     individual</h1>
 
                 <button class="button" id="contact-btn">Contact Me</button>
+                <a href="images/Bhavishya resume.pdf" download class="button">Download Resume</a>
             </div>
             <div class="popup" id="popup">
                 <div class="popup-content">
