--- a/index.html
+++ b/index.html
@@ -147,14 +147,18 @@
                 </div>
                 <div class="work__img">
                     <img src="images/work2.jpg" alt="Work 2">
-                    <a href="https://saimonsaysbjain41.vercel.app/"
+                    <a href="https://github.com/Bhavishya41/saimon-says"
                         target="_blank">Simon Says<br/> game</a>
-                    <a href="https://github.com/Bhavishya41" class="button" target="_blank">View on GitHub</a>
-                </div>
+                </div><br/>
                 <div class="work__img">
                     <img src="images/work3.png" alt="Work 3">
                     <a href="https://github.com/Bhavishya41/saimon-says"
                         target="_blank">Competitve Programing (leetcode)</a>
+                </div>
+                <div class="work__img">
+                    <img src="images/work4.png" alt="Work 3">
+                    <a href="https://github.com/Bhavishya41/voting-application-backend_project"
+                        target="_blank">Voting-application<br/>   (backend)</a>
                 </div>
             </div>
         </section>
