fixed adventure quick link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                    <li class="nav__item"><a href="#adventures" class="nav__link">Adventures</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
             </div>
@@ -138,8 +138,8 @@
         </section>
 
         <!--work-->
-        <section class="section work">
-            <h2 class="section-title">My Adventures</h2>
+        <section id="adventures" class="section adventures">
+            <h2 class="section-title">Adventures</h2>
             <div class="work__container bd-grid">
                 <div class="work__img">
                     <img src="images/work1.jpg" alt="Work 1">
@@ -147,12 +147,12 @@
                 </div>
                 <div class="work__img">
                     <img src="images/work2.jpg" alt="Work 2">
-                    <a href="https://github.com/Bhavishya41/saimon-says"
+                    <a href="https://github.com/Bhavishya41/saimon-says "
                         target="_blank">Simon Says<br/> game</a>
                 </div><br/>
                 <div class="work__img">
                     <img src="images/work3.png" alt="Work 3">
-                    <a href="https://github.com/Bhavishya41/saimon-says"
+                    <a href="https://leetcode.com/u/bhavishya-jain/"
                         target="_blank">Competitve Programing (leetcode)</a>
                 </div>
                 <div class="work__img">
