added new project and updated resume

--- a/index.html
+++ b/index.html
@@ -146,19 +146,14 @@
                     <a href="https://github.com/Bhavishya41/Python_tutorial" target="_blank">my python <br/>projects</a>
                 </div>
                 <div class="work__img">
-                    <img src="images/work2.jpg" alt="Work 2">
-                    <a href="https://github.com/Bhavishya41/saimon-says "
-                        target="_blank">Simon Says<br/> game</a>
-                </div><br/>
-                <div class="work__img">
-                    <img src="images/work3.png" alt="Work 3">
-                    <a href="https://leetcode.com/u/bhavishya-jain/"
-                        target="_blank">Competitve Programing (leetcode)</a>
+                    <img src="images/work4.png" alt="Work 4">
+                    <a href="https://orderly-two.vercel.app/" class="button" target="_blank">Orderly</a>
+                    <a href="https://github.com/Bhavishya41/Orderly" class="button" target="_blank">Orderly GitHub</a>
                 </div>
                 <div class="work__img">
-                    <img src="images/work4.png" alt="Work 3">
-                    <a href="https://github.com/Bhavishya41/voting-application-backend_project"
-                        target="_blank">Voting-application<br/>   (backend)</a>
+                    <img src="images/work2.jpg" alt="Work 2">
+                    <a href="https://saimonsaysbjain41.vercel.app/" class="button" target="_blank">Simon Says</a>
+                    <a href="https://github.com/Bhavishya41/saimon-says" class="button" target="_blank">Simon Says GitHub</a>
                 </div>
             </div>
         </section>
