--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <!-- Add this in your <head> for Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <title>techiristic.com</title>
+    <title>futurtiesta.dev</title>
 </head>
 
 <body>
@@ -198,3 +198,4 @@
 </body>
 
 </html>
+
