added proof of Ink

--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
             <h2 class="section-title">Adventures</h2>
             <div class="work__container bd-grid">
                 <div class="work__img">
-                    <img src="images/work1.jpg" alt="Work 1">
-                    <a href="https://github.com/Bhavishya41/Python_tutorial" target="_blank">my python <br/>projects</a>
+                    <img src="images/work1.png" alt="Work 1">
+                    <a href="https://proof-of-ink.vercel.app/" class="button" target="_blank">Proof Of Ink</a>
+                    <a href="https://github.com/Bhavishya41/ProofOfInk"  class="button" target="_blank">Proof Of Ink Github</a>
                 </div>
                 <div class="work__img">
                     <img src="images/work4.png" alt="Work 4">
